<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsPaneId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView"
        android:layout_width="118dp"
        android:layout_height="93dp"
        android:layout_marginBottom="550dp"
        android:src="@drawable/setting_gif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/SettingTable"
        android:layout_width="382dp"
        android:layout_height="437dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:background="#00C0C0C0"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableRow
            android:id="@+id/Mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/modeTxt"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="2"
                android:background="#F3379AA6"
                android:gravity="center"
                android:scaleType="center"
                android:text="@string/ModeTitle"
                android:textColor="@color/black"
                android:textSize="34sp" />


        </TableRow>

        <TableRow
            android:id="@+id/ModeChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <RadioGroup
                android:id="@+id/modeChoiceRaGr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center|clip_vertical">

                <RadioButton
                    android:id="@+id/ezMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:gravity="clip_horizontal|center_vertical"
                    android:text="@string/ezMode"
                    android:textColor="#DA0303"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/hardMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@string/hardMode"
                    android:textColor="#DA0303"
                    android:textSize="20sp" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/Theme"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/themeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="2"
                android:background="#F3379AA6"
                android:gravity="center"
                android:text="@string/ThemeTitle"
                android:textColor="@color/black"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:id="@+id/ThemeChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <ImageButton
                android:id="@+id/santaThemImBtn"
                android:layout_width="210dp"
                android:layout_height="145dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/santaclaus"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/kingsThemImBtn"
                android:layout_width="142dp"
                android:layout_height="145dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/reyes_magos"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/Music"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00FFFFFF">

            <TextView
                android:id="@+id/MusicTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="2"
                android:background="#F3379AA6"
                android:backgroundTint="#F3379AA6"
                android:gravity="center"
                android:text="@string/musicTittle"
                android:textColor="@color/black"
                android:textSize="34sp" />

        </TableRow>

        <TableRow
            android:id="@+id/MusicChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/pruebaFlip"
                android:layout_width="382dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_span="2"
                android:gravity="center_horizontal|center_vertical"
                android:textOff=""
                android:textOn="" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EF7070"
        android:shadowColor="#700707"
        android:text="@string/SaveSetting"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#670A0B"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingTable"
        app:layout_constraintVertical_bias="0.215"
        app:rippleColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>